# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "engine-metadata"
description = "Kite goespatial engine"
license = "Apache-2.0"
version = "0.0.1-SNAPSHOT"
homepage = "https://github.com/kiril-me/kite"
repository = "https://github.com/kiril-me/kite"
authors = ["Kirils Mensikovs <post+dev@kiril.me>"]
keywords = [ "sql", "goespatial", "dataflow" ]
edition = "2018"

[dependencies]
arrow = "4.0.0"
datafusion = "4.0.0"
log = "0.4.14"
thiserror = "1.0.24"

[dev-dependencies]

[build-dependencies]
tonic-build = { version = "0.4" }
